# celer

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  api.html  codecov.yml  contribute.html  debug.py  debug_screening.py  debug_script.py  environment.yml  genindex.html  get_started.html  index.html  objects.inv  plot_mcp.py  py-modindex.html  pyproject.toml  requirements.txt  run_logreg.py  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  tt_numpydoc.py  whats_new.rst
.circleci/: config.yml
_downloads/: plot_finance_path.ipynb  plot_finance_path.py  plot_lasso_cv.ipynb  plot_lasso_cv.py  plot_leukemia_path.ipynb  plot_leukemia_path.py  temp_plot_finance_path.ipynb
_sources/: api.rst.txt  get_started.rst.txt  index.rst.txt  index.txt  sg_execution_times.rst.txt
_static/: documentation_options.js  style.css
auto_examples/: index.html  plot_dummy.html  plot_finance_path.html  plot_group_lasso.html  plot_lasso_cv.html  plot_leukemia_path.html  plot_logreg_timings.html  plot_multitask_lasso_cv.html  sg_execution_times.html  temp_plot_finance_path.html
celer/: PN_logreg.pyx  __init__.py  cython_utils.pxd  cython_utils.pyx  dense.pyx  dropin_sklearn.py  dual_accel.pyx  group_fast.pyx  group_lasso_fast.pyx  homotopy.py  lasso_fast.pyx  logreg_fast.pyx  multitask_fast.pyx  non_convex.py  plot_utils.py  sparse.pyx  tmp_hack_sklearn.py  utils.pxd  utils.pyx  wrapper.py
celer_small_alphas/: reproduce.py
doc/: Makefile  about.rst  api.rst  conf.py  contribute.rst  doc-requirements.txt  get_started.rst  github_link.py  index.rst
examples/: README.txt  download_preprocess_finance.py  example_finance_path.py  example_leukemia_path.py  plot_adaptive_lasso_path.py  plot_adaptivelasso.py  plot_dummy.py  plot_enet.py  plot_enet_use_case.py  plot_estimation_prediction_dilemma.py  plot_finance_path.py  plot_group_lasso.py  plot_k_fold.py  plot_lasso_cv.py  plot_leukemia_path.py  plot_logreg_timings.py  plot_multitask_lasso_cv.py  plot_ols_lasso_enet.py  plot_wLasso.py
mathurin/: debug_mtl.py
(+77 files in other folders)
