[build-system]
requires = ["setuptools", "numpy>=1.12", "scipy>=0.18.0", "Cython>=0.26"]
build-backend = "setuptools.build_meta"


[project]
dependencies =[
    'numpy>=1.12', 'seaborn>=0.7', 'scipy>=0.18.0',
    'matplotlib>=2.0.0', 'Cython>=0.26', 'libsvmdata>=0.3',
    'scikit-learn>=1.0', 'xarray', 'download', 'tqdm'
]